test/Debugger/JsDiagBreakOnUncaughtException.baseline
Error: throw exception from throwFunction
	at throwFunction() (JsDiagBreakOnUncaughtException.js:18:4)
	at Global code (JsDiagBreakOnUncaughtException.js:20:1)
